# materials_concepts

./: Downloader.py  Planning.md  README.md  TODO.md  _temp_search.py  clean_abstracts.py  create_evolution_map.sh  download_sources.py  download_works.py  element_helper.py  environment.yml  filter_works.py  preprocessing.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
analyze/: Explore.ipynb  analyze_dist.py  analyze_plain_dist.py  analyze_test_period.py  analyze_train_period.py  concept_containment.py  simulate_no_hub_nodes.py
analyze/visualization/: auc_curve.py  concept_evolution.py  depth_dist.py  (+1 more)
api/: main.py  search.py
data/: _works.csv  material-science_sources.csv  material_sources.csv  materials-science_sources.csv  works.csv
downloader/: Downloader.py  download_sources.py  download_works.py  helper.py
filtering/: README.md  filter_works.py
graph/: Explore.ipynb  README.md  baseline.py  build.py  prepare.py  train.py
model/: README.md  analyze.py  analyze_pred.py  create_data.py  create_training_data.py  graph.py  metrics.py  prepare.py  reduce_dim.py
preparation/: README.md  clean_abstracts.py  extract_concepts.py  extract_elements.py  preprocessing.py  test_chem_tokenizer.py
report/: README.md  merge.py  parse_txts.py  process.py  unpack_f.py
tagging/: README.md  abstracts.txt  create_abstracts.py  create_inference.py  extract_tags.py  out.csv
utils/: chem_tokenizer.py  preprocessing.py  test_chem_tokenizer.py  utils.py
word_embeddings/: analyze.py  average_embs.py  generate.py  interface.py  knn.py
(+232 files in other folders)
