[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "materials-concepts"
description = "Processing, transformation, analysis and prediction of materials concepts."
version = "0.0.1"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Thomas Marwitz", email = "thomasmarwitz3@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/aimat-lab/materials_concepts"

[tool.hatch.build.targets.sdist]
include = [
    "/materials_concepts",
]

[tool.ruff]
line-length = 88
target-version = "py310"

select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # pylint
    "PL",
    # tidy
    "TID",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP"
]
ignore = [
    # may cause conflicts with ruff formatter
    "E501",
    "W191"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true